--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>San Joaquin Valley Town Hall</title>
 	<link rel="stylesheet" href="Style/normalize.css">
 	<link rel="stylesheet" href="Style/main.css">
-	<link href="Image/favicon.ico"> rel="shortcut icon"
+	<link href="Image/favicon.ico">
 </head>
 
 <body>
